# MergeGraph_AE_VLDB24

./: CMakeLists.txt  README.md
apps/: BFS.C  BFS_merge.C  SSSP.C  SSSP_merge.C  SSWP.C  SSWP_merge.C  WCC.C  WCC_merge.C
ligra/: IO.h  edgemap_once.h  graph.h  ligra.h  merge.h  merge_graph.h  parseCommandLine.h  vertex.h  vertexSubset.h
script/: get_input.sh
script/merge/: bfs_merge.sh  sssp_merge.sh  sswp_merge.sh  wcc_merge.sh
script/preprocess/: bfs_preprocess.sh  sssp_preprocess.sh  sswp_preprocess.sh  wcc_preprocess.sh
utils/: convert2binary.cpp  get_csr_input.cpp  split.cpp
